--- a/css/style.css
+++ b/css/style.css
@@ -10,7 +10,7 @@
 
 /* float whatsapp logo */
 .float{
-	position: fixed;
+	position: absolute;
 	width:60px;
 	height:60px; 
 	bottom:60px;
@@ -27,6 +27,7 @@
 .my-float{
 	margin-top:16px;
 }
+
 
 body {
   background: #fff;
@@ -466,11 +467,11 @@ h1, h2, h3, h4, h5, h6 {
 
 /* Mobile Nav body classes */
 body.mobile-nav-active {
-  overflow: hidden;
+  overflow: auto;
 }
 
 body.mobile-nav-active #mobile-nav {
-  left: 0;
+  left:0;
 }
 
 body.mobile-nav-active #mobile-nav-toggle {
@@ -515,7 +516,7 @@ body.mobile-nav-active #mobile-nav-toggle {
 }
 
 #about .about-img img {
-  max-width: 124%;
+  max-width: 100%;
 }
 
 @media (max-width: 768px) {
@@ -744,7 +745,7 @@ body.scrollable {
 }
 
 #testimonials .profile .pic img {
-  max-width: 100%;
+  max-width: 200%;
 }
 
 #testimonials .profile h4 {
